app/main/default/objects/Flosum__Repository__c/fields/Flosum__Build_and_Deploy_Organizations__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Build_and_Deploy_Organizations__c</fullName>
        <description>for pipeline deployment</description>
        <label>Build and Deploy Organizations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>