app/main/default/objects/Flosum__Repository__c/fields/Flosum__Deployment_Mode__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Deployment_Mode__c</fullName>
        <label>CI Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VALIDATE</fullName>
                </value>
                <value>
                    <fullName>DEPLOY</fullName>
                    <default>true</default>
                    <label>DEPLOY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>