app/main/default/objects/Flosum__Repository__c/fields/Flosum__Last_Commit__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Last_Commit__c</fullName>
        <label>Last Commit</label>
        <length>82</length>
        <type>Text</type>
    </fields>
</CustomObject>